Fix: form validation errors and modal style
The form was getting an error when the modal was being closed
which was due to the required attribute with display hidden.
Update the form to nest the inputs within the labels.

--- a/server/project-library/style.css
+++ b/server/project-library/style.css
@@ -38,7 +38,7 @@ th {
     vertical-align: bottom;
 }
 
-button {
+button, input[type='submit'] {
     padding: 3px 25px;
     cursor: pointer;
     border: 1px transparent solid; 
